# runwith

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
inc/: cli.hpp  enviroment_file.hpp  test_utils.hpp
src/: cli.cpp  enviroment_file.cpp  runwith.cpp
